// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Captcha - Demo Customize 1`] = `
<div class="ui-example-child ui-example-child-captcha">
  <div class="ui-captcha">
    <div position="center" class="ui-dialog">
      <div class="ui-popup with-mask center" style="display:none;">
        <div name="ui-mask-fade" class="ui-popup-mask" style="display:none;"></div>
        <div name="ui-fade" class="ui-popup-box ui-fade" style="display:none;">
          <div class="ui-dialog-content">
            <div class="ui-dialog-body"><a role="button" class="ui-dialog-close"><i class="ui-icon icon-font ui-icon-close close md" style="color:;"></i></a>
              <!---->
              <!---->
              <div class="ui-captcha-content">
                <h2 class="ui-captcha-title">输入验证码</h2>
                <div class="ui-captcha-message">
                  验证码已发送至 186****5407
                </div>
              </div>
              <div class="ui-codebox-wrapper">
                <div class="ui-codebox is-justify"><span class="ui-codebox-box"><!----> <!----></span><span class="ui-codebox-box"><!----> <!----></span><span class="ui-codebox-box"><!----> <!----></span><span class="ui-codebox-box"><!----> <!----></span></div>
                <footer class="ui-captcha-footer">
                  <div class="ui-captcha-brief"></div> <button class="ui-captcha-btn">发送验证码</button>
                </footer>
                <form action="" style="display:none;"><input type="text" maxlength="4" value="" class="ui-codebox-input"></form>
                <div class="ui-number-keyboard ui-codebox-keyboard">
                  <div class="ui-popup bottom" style="display:none;">
                    <div name="ui-mask-fade" class="ui-popup-mask" style="display:none;"></div>
                    <div name="ui-slide-up" class="ui-popup-box ui-slide-up" style="display:none;">
                      <!---->
                      <div class="ui-number-keyboard-container simple">
                        <div class="keyboard-number">
                          <ul class="keyboard-number-list">
                            <li class="keyboard-number-item"><span>1</span></li>
                            <li class="keyboard-number-item"><span>2</span></li>
                            <li class="keyboard-number-item"><span>3</span></li>
                            <li class="keyboard-number-item"><span>4</span></li>
                            <li class="keyboard-number-item"><span>5</span></li>
                            <li class="keyboard-number-item"><span>6</span></li>
                            <li class="keyboard-number-item"><span>7</span></li>
                            <li class="keyboard-number-item"><span>8</span></li>
                            <li class="keyboard-number-item"><span>9</span></li>
                            <li class="keyboard-number-item no-bg"></li>
                            <li class="keyboard-number-item"><span>0</span></li>
                            <li class="keyboard-number-item no-bg delete"><span></span></li>
                          </ul>
                        </div>
                        <!---->
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <footer class="ui-dialog-actions"></footer>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Captcha - Demo Inline display 1`] = `
<div class="ui-example-child ui-example-child-captcha-1">
  <div class="ui-captcha">
    <div class="ui-captcha-content">
      <!---->
      <div class="ui-captcha-message">
        验证码已发送至186****5407
      </div>
    </div>
    <div class="ui-codebox-wrapper">
      <div class="ui-codebox is-justify"><span class="ui-codebox-box"><!----> <!----></span><span class="ui-codebox-box"><!----> <!----></span><span class="ui-codebox-box"><!----> <!----></span><span class="ui-codebox-box"><!----> <!----></span></div>
      <footer class="ui-captcha-footer">
        <div class="ui-captcha-brief">最新验证码依然有效，请勿重发</div> <button class="ui-captcha-btn">发送验证码</button>
      </footer>
      <form action="" style="display:none;"><input type="text" maxlength="4" value="" class="ui-codebox-input"></form>
      <div class="ui-number-keyboard ui-codebox-keyboard in-view">
        <!---->
        <div class="ui-number-keyboard-container simple">
          <div class="keyboard-number">
            <ul class="keyboard-number-list">
              <li class="keyboard-number-item"><span>1</span></li>
              <li class="keyboard-number-item"><span>2</span></li>
              <li class="keyboard-number-item"><span>3</span></li>
              <li class="keyboard-number-item"><span>4</span></li>
              <li class="keyboard-number-item"><span>5</span></li>
              <li class="keyboard-number-item"><span>6</span></li>
              <li class="keyboard-number-item"><span>7</span></li>
              <li class="keyboard-number-item"><span>8</span></li>
              <li class="keyboard-number-item"><span>9</span></li>
              <li class="keyboard-number-item no-bg"></li>
              <li class="keyboard-number-item"><span>0</span></li>
              <li class="keyboard-number-item no-bg delete"><span></span></li>
            </ul>
          </div>
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;
